cabal-version:      3.6
name:               lending-api-docs
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-unsafe
    -Wno-safe
  build-depends:
    , base ^>=4.14.3.0

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Lending.Api.Docs
  build-depends:
    , openapi3
    , lens
    , servant-openapi3
    , servant-server
    , servant-swagger-ui
    , text
    -- Internal
    , lending-api:lending-api-types
    , lending-faucet:lending-faucet-types
    , servant-api-handlers

executable lending-api-docs-app
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded -rtsopts
  build-depends:
    , base
    -- Internal
    , lending-api-docs
    , service-runner
