cabal-version:      3.6
name:               lending-bootstrap
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-unsafe
    -Wno-safe
  build-depends:
    , base ^>=4.14.3.0

executable lending-bootstrap-deployer
  import:         lang
  hs-source-dirs: deployer
  main-is:        Main.hs
  ghc-options:
    -threaded -rtsopts
  build-depends:
    -- Internal
    , cardano-bootstrap-deployer
    , lending-types
    , service-runner

executable lending-bootstrap-initializer
  import:         lang
  hs-source-dirs: initializer
  main-is:        Main.hs
  ghc-options:
    -threaded -rtsopts
  build-depends:
    , aeson
    , cardano-api
    , containers
    , exceptions
    , filepath
    , plutus-ledger-api
    , ply-core
    , transformers
    , yaml
    -- Internal
    , cardano-index
    , cardano-api-extra
    , cardano-tx-builder
    , lending-core
    , lending-types
    , plutus-ledger-api-polyfill
    , service-runner
