cabal-version:      3.6
name:               lending-core
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
  build-depends:
    , base

library
  import: lang
  hs-source-dirs:   src
  ghc-options:
    -Wno-unused-packages
  exposed-modules:
    Lending.Core.Api
    Lending.Core.AccountValue
    Lending.Core.Errors
    Lending.Core.MinAdaUtxo
    Lending.Core.JsonViaTextEnvelope
    Lending.Core.Utils
  build-depends:
    , aeson
    , async
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-core
    , containers
    , esqueleto
    , exceptions
    , extra
    , filepath
    , lens
    , monad-logger
    , mtl
    , openapi3
    , persistent
    , persistent-postgresql
    , plutarch-script-import
    , plutus-core
    , plutus-ledger-api
    , plutus-ledger-api-polyfill
    , plutus-tx
    , ply-core
    , postgresql-simple
    , resourcet
    , safe-exceptions
    , servant-client
    , servant-server
    , string-conversions
    , tagged
    , text
    , time
    , transformers
    , unix
    , wai
    , wai-cors
    , warp
    -- Internal
    , cardano-index
    , cardano-api-extra
    , cardano-tx-builder
    , lending-types

-- test-suite lending-core-test
--   import:         lang
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Main.hs
--   other-modules:
--   build-depends:
--     , hspec
--     -- Internal
--     , lending-core
