cabal-version:      3.6
name:               lending-index
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
  build-depends:
    base

library
  import: lang
  hs-source-dirs: src
  exposed-modules:
    Lending.Index.Account
    Lending.Index.Config
    Lending.Index.Exception
    Lending.Index.Liquidation
    Lending.Index.Manager
    Lending.Index.Operator
    Lending.Index.Oracle
    Lending.Index.Orphans
    Lending.Index.Pool
    Lending.Index.Query.Account
    Lending.Index.Query.ChainPoint
    Lending.Index.Query.ScriptDeployment
    Lending.Index.Query.Liquidation
    Lending.Index.Query.Manager
    Lending.Index.Query.Operator
    Lending.Index.Query.Oracle
    Lending.Index.Query.Pool
    Lending.Index.Query.Types
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , esqueleto
    , exceptions
    , extra
    , monad-logger
    , persistent
    , plutus-script-utils
    , resourcet
    , text
    , time
    , transformers
    -- Internal
    , cardano-api-extra
    , cardano-index
    , cardano-tx-builder
    , lending-core
    , lending-types
    , plutus-ledger-api-polyfill

executable lending-index-app
  import: lang
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:
    -threaded -rtsopts
  build-depends:
    , bytestring
    , yaml
    -- Internal
    , cardano-index
    , lending-index
    , service-runner

test-suite lending-index-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    , tasty
    , tasty-hedgehog
