cabal-version:      3.6
name:               lending-services
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-safe
    -Wno-unticked-promoted-constructors
  build-depends:
    , base

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Lending.Services.AppEnv
    Lending.Services.Config
    Lending.Services.Errors
    Lending.Services.Runner.Batching
    Lending.Services.Runner.GetBatchingConstraints
    Lending.Services.Runner.Utils
    Lending.Services.Transactions.Batcher
    Lending.Services.Transactions.Process
    Lending.Services.Transactions.Types
    Lending.Services.Transactions.Utils
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-api-extra
    , cardano-slotting
    , containers
    , exceptions
    , extra
    , filepath
    , monad-logger
    , mtl
    , ouroboros-consensus
    , persistent
    , persistent-postgresql
    , plutus-ledger-api
    , plutus-ledger-api-polyfill
    , plutus-tx
    , resourcet
    , text
    , transformers
    , yaml
    -- Internal
    , cardano-index
    , cardano-tx-builder
    , lending-core
    , lending-index
    , lending-types
    , plutarch-script-import

executable lending-services-exe
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:
    -threaded -rtsopts
  build-depends:
    , exceptions
    , monad-logger
    , text
    , transformers
    -- Internal
    , lending-services
    , service-runner
