cabal-version:      3.6
name:               lending-tests
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything -Werror
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-unsafe
    -Wno-safe
  build-depends:
    , base

library
  import: lang
  hs-source-dirs: src
  exposed-modules:
    Lending.Test.Api.Account
    Lending.Test.Api.Manager
    Lending.Test.Api.Pool
    Lending.Test.Api.SyncStatus
    Lending.Test.Common
    Lending.Test.Env
    Lending.Test.Faucet.MintToken
    Lending.Test.Functional
    Lending.Test.Functional.Asset
    Lending.Test.Functional.Oracle
    Lending.Test.Functional.Types
    Lending.Test.Functional.Update
    Lending.Test.Index.Account
    Lending.Test.Index.Manager
    Lending.Test.Index.Oracle
    Lending.Test.Index.Pool
    Lending.Test.InitAccount
    Lending.Test.Integ
    Lending.Test.LiquidationBot
    Lending.Test.Services.Batcher
    Lending.Test.Services.Oracle
  build-depends:
    , aeson
    , attoparsec
    , bytestring
    , cardano-api
    , casing
    , containers
    , directory
    , esqueleto
    , exceptions
    , filepath
    , http-client
    , monad-logger
    , mtl
    , ouroboros-network
    , persistent
    , persistent-postgresql
    , postgresql-simple
    , resource-pool
    , resourcet
    , retry
    , servant
    , servant-client
    , tagged
    , tasty
    , tasty-hunit
    , text
    , transformers
    , unliftio
    , unliftio-core
    , yaml
    -- Internal
    , cardano-api-extra
    , cardano-index
    , cardano-tx-builder
    , lending-api:lending-api-types
    , lending-core
    , lending-faucet:lending-faucet-types
    , lending-index
    , lending-liquidation-bot
    , lending-oracle-service:lending-oracle-api-types
    , lending-services
    , lending-types
    , plutus-ledger-api-polyfill

test-suite lending-integration-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts
  build-depends:
    , tasty
    -- Internal
    , lending-tests
