cabal-version:      3.6
name:               lending-types
version:            0.1.0.0
maintainer:         meld.com
author:             MELD Labs

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-safe
  build-depends:
    , base

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Lending.Functions
    Lending.Scripts
    Lending.Types
    Lending.Types.Account
    Lending.Types.Account.OffChain
    Lending.Types.Asset
    Lending.Types.Exchange
    Lending.Types.LoanToValue
    Lending.Types.Manager
    Lending.Types.Oracle
    Lending.Types.OracleCheckerToken
    Lending.Types.Orphans
    Lending.Types.Percent
    Lending.Types.Pool
    Lending.Types.Pool.OffChain
  build-depends:
    , aeson
    , containers
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , tagged
    -- Internal
    , plutarch-script-converter-shared
    , plutus-ledger-api-polyfill
